# expenses

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  build.sh  builder.Dockerfile  create_migration.sh
.github/workflows/: build.yml
lnav/: README.md  expenses_log.json
migrations/: 20250527223358_initial.down.sql  20250527223358_initial.up.sql  README.md
src/: args.rs  db.rs  domain.rs  handlers.rs  jobs.rs  logging.rs  main.rs  model.rs  monzo.rs
